# infracontext

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.infracontext/: .gitignore  config.yaml
.infracontext/projects/demo/: relationships.yaml
.infracontext/projects/demo/nodes/vm/: web.yaml
agents/: ic-collector-checker.md  ic-connectivity-checker.md  ic-cpu-checker.md  ic-memory-checker.md  ic-service-checker.md  ic-storage-capacity-checker.md  ic-storage-io-checker.md
commands/: ic-collect.md  ic-trace.md  ic-triage.md
docs/: SCHEMA.md  USAGE.md  VERSION_LOG.md
examples/: README.md
examples/acme-corp/production/: project.yaml  relationships.yaml
examples/acme-corp/production/nodes/external_service/: aws-s3-backups.yaml  cloudflare-cdn.yaml
examples/acme-corp/production/nodes/physical_host/: pve01.yaml
examples/acme-corp/production/nodes/vm/: cache-01.yaml  db-01.yaml  web-01.yaml
examples/acme-corp/production/sources/: ssh-config.yaml
scripts/: publish-github.sh
site/: index.html
src/infracontext/: __init__.py  __main__.py  config.py  consolidate.py  envregistry.py  federation.py  mcp_server.py  overrides.py  parking.py  paths.py  runs.py  skill_data.py  storage.py  tier.py
src/infracontext/cli/: __init__.py  completion.py  config.py  describe.py  doctor.py  graph.py  import_cmd.py  learn.py  main.py  mcp.py  migrate.py  query.py  relationships.py  resolve.py  ssh.py  triage.py  triage_cmd.py
src/infracontext/credentials/: __init__.py  keychain.py
src/infracontext/graph/: __init__.py  analysis.py  loader.py  query.py  render.py  render3d.py
src/infracontext/graph/assets/: README.md
src/infracontext/models/: __init__.py  chain.py  endpoint.py  function.py  node.py  project.py  relationship.py  tier.py
src/infracontext/query/: __init__.py  base.py  checkmk.py  loki.py  monit.py  prometheus.py  redfish.py  snmp.py
src/infracontext/sources/: __init__.py  base.py  checkmk.py  dedup.py  netbox.py  proxmox.py  redfish.py  registry.py  snmp.py  ssh_config.py
src/infracontext/triage/: __init__.py
tests/: __init__.py  conftest.py  test_chains.py  test_cli_hotpath.py  test_cli_json.py  test_cli_learn.py  test_cli_node_add.py  test_cli_ssh.py  test_config_federation_robustness.py  test_consolidate.py  test_credentials.py  test_cross_project.py  test_dedup.py  test_doctor_lint.py  test_doctor_robustness.py  test_envregistry.py  test_federation.py  test_graph.py  test_import_devicetype.py  test_init.py  test_init_gitignore.py  test_mcp_server.py  test_node_validation.py  test_overrides.py  test_parking.py  test_paths.py  test_perf_followups.py  test_query_helpers.py  test_query_plugins.py  test_query_redfish.py  test_query_snmp.py  test_query_status.py  test_relationship_constraints.py  test_render.py  test_render3d.py  test_resolve.py  test_runs.py  test_schema_migration.py  test_slugify.py  test_sources.py  (+7 more)
