[project]
name = "infracontext"
version = "0.1.0"
description = "Infrastructure context for humans and agents"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Sysinit" }]
keywords = ["infrastructure", "documentation", "troubleshooting", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.25.1",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "ruamel.yaml>=0.19.1",
    "networkx>=3.6.1",
    "proxmoxer>=2.3.0",
    "requests>=2.34.2",
    "asyncssh>=2.23.0",
    "prompt-toolkit>=3.0.52",
    "keyring>=25.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
]

[project.scripts]
ic = "infracontext.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infracontext"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["infracontext"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
