[project]
name = "infracontext"
version = "0.4.0"
description = "Infrastructure context for humans and agents"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Sysinit" }]
keywords = ["infrastructure", "documentation", "troubleshooting", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.26.8",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "ruamel.yaml>=0.19.1",
    "networkx>=3.6.1",
    "proxmoxer>=2.3.0",
    "puresnmp>=2.0.1",
    "requests>=2.34.2",
    "asyncssh>=2.24.0",
    "prompt-toolkit>=3.0.52",
    "keyring>=25.7.0",
    # Fast C-based safe loader for the read path; ruamel.yaml stays for
    # comment-preserving writes.
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
]
viz = [
    # SVG rendering for `ic graph render --format svg`. HTML rendering uses
    # a vendored vis-network bundle (src/infracontext/graph/assets/) and
    # GraphML uses bundled networkx, so neither needs an extra Python
    # dependency.
    "matplotlib>=3.11.0",
]
mcp = [
    # `ic mcp serve` — MCP server exposing node context/query/learning tools.
    "mcp>=1.28.1",
    # parked_grep needs an interruptible regex engine: stdlib `re` holds the
    # GIL for the whole match with no timeout, so catastrophic backtracking
    # would hang the server. mrab-regex checks a deadline inside the engine.
    "regex>=2026.7.10",
]

[project.scripts]
ic = "infracontext.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infracontext"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["infracontext"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
